--- a/MyGame.vcxproj
+++ b/MyGame.vcxproj
@@ -167,8 +167,11 @@
     <ClInclude Include="MyLibrary\3D\Sphere.h" />
     <ClInclude Include="MyLibrary\Common\DeviceResources.h" />
     <ClInclude Include="MyLibrary\Common\StepTimer.h" />
+    <ClInclude Include="MyLibrary\Component\Component.h" />
+    <ClInclude Include="MyLibrary\Component\Transform.h" />
     <ClInclude Include="MyLibrary\Framework\Framework.h" />
     <ClInclude Include="MyLibrary\MyLibrary.h" />
+    <ClInclude Include="MyLibrary\Node\Node.h" />
     <ClInclude Include="MyLibrary\pch.h" />
     <ClInclude Include="MyLibrary\Scene\SceneBase.h" />
     <ClInclude Include="MyLibrary\Scene\SceneManager.h" />
@@ -180,7 +183,10 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MyLibrary\3D\Sphere.cpp" />
     <ClCompile Include="MyLibrary\Common\DeviceResources.cpp" />
+    <ClCompile Include="MyLibrary\Component\Component.cpp" />
+    <ClCompile Include="MyLibrary\Component\Transform.cpp" />
     <ClCompile Include="MyLibrary\Framework\Framework.cpp" />
+    <ClCompile Include="MyLibrary\Node\Node.cpp" />
     <ClCompile Include="MyLibrary\pch.cpp" />
     <ClCompile Include="MyLibrary\Scene\SceneBase.cpp" />
     <ClCompile Include="MyLibrary\Scene\SceneManager.cpp" />
